// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Card > matches snapshot 1`] = `
<div>
  <div
    class="card"
  >
    Card content
  </div>
</div>
`;

exports[`Card composition > matches snapshot with full composition 1`] = `
<div>
  <div
    class="card"
  >
    <div
      class="card-header"
    >
      <h2
        class="card-title"
      >
        Server Status
      </h2>
    </div>
    <div
      class="card-content"
    >
      <p>
        Server is running
      </p>
    </div>
  </div>
</div>
`;
